<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MenuActivity"
    >


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="86dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="TABLA DE BASKET"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="-32dp"
            android:layout_marginBottom="54dp"
            android:gravity="bottom"
            android:textAlignment="center"
            android:text="@string/paciente_choque"
            android:textSize="18sp" />

        <GridLayout
            android:layout_marginTop="100dp"
            android:columnCount="2"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp"
            >

                <!-- 1 -->
                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:cardElevation="8dp"
                    android:onClick="launchPerdidaActivity"
                    app:cardCornerRadius="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/grados_de_choque"
                            android:textColor="@color/cardview_dark_background"
                            android:gravity="center"
                            android:textSize="30sp"/>
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            /> android:src="@drawable/reading_book"/>
                </android.support.v7.widget.CardView>

                <!-- 2 -->
                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    android:onClick="launchPerdidaActivity">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/perdida"
                            android:textColor="@color/cardview_dark_background"
                            android:gravity="center"
                            android:textSize="30sp"/>
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            /> android:src="@drawable/reading_book"/>
                </android.support.v7.widget.CardView>

                <!-- 3 -->
                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    android:onClick="launchPerdidaActivity"
                    >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/sensorio"
                            android:textColor="@color/cardview_dark_background"
                            android:gravity="center"
                            android:textSize="30sp"/>
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                           /> android:src="@drawable/reading_book"/>
                </android.support.v7.widget.CardView>

                <!-- 4 -->
                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    android:onClick="launchPerdidaActivity"
                    >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/perfusion"
                            android:textColor="@color/cardview_dark_background"
                            android:gravity="center"
                            android:textSize="30sp"/>
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                           /> android:src="@drawable/reading_book"/>
                </android.support.v7.widget.CardView>

                <!-- 5 -->
                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    android:onClick="launchPerdidaActivity">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/pulso"
                            android:textColor="@color/cardview_dark_background"
                            android:gravity="center"
                            android:textSize="30sp"/>
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                           /> android:src="@drawable/reading_book"/>
                </android.support.v7.widget.CardView>

                <!-- 6 -->
                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    android:onClick="launchPerdidaActivity">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/presion_arterial"
                            android:textColor="@color/cardview_dark_background"
                            android:gravity="center"
                            android:textSize="30sp"/>
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                           /> android:src="@drawable/reading_book"/>
                </android.support.v7.widget.CardView>


        </GridLayout>


</RelativeLayout>